# OpenGLStudy

./: .gitignore  CMakeLists.txt  main.cpp
application/: Application.cpp  Application.h  assimpLoader.cpp  assimpLoader.h
application/camera/: camera.cpp  camera.h  cameraControl.cpp  cameraControl.h  gameCameraControl.cpp  gameCameraControl.h  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h  trackBallCameraControl.cpp  trackBallCameraControl.h
assets/fbx/: grass.fbx
assets/shaders/: cube.frag  cube.vert  depth.frag  fragment.frag  phong.frag  phongEnv.frag  phongOpacityMask.frag  screen.frag  screen.vert  vertex.vert  white.frag  white.vert
glframework/: CMakeLists.txt  core.h  geometry.cpp  geometry.h  mesh.cpp  mesh.h  object.cpp  object.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h
glframework/frameBuffer/: frameBuffer.cpp  frameBuffer.h
glframework/light/: ambientLight.h  directionalLight.cpp  directionalLight.h  light.h  pointLight.cpp  pointLight.h  spotLight.h
glframework/material/: cubeMaterial.cpp  cubeMaterial.h  depthMaterial.cpp  depthMaterial.h  material.cpp  material.h  opacityMaskMaterial.h  opacityMaskMatrial.cpp  phongEnvMaterial.cpp  phongEnvMaterial.h  phongMaterial.cpp  phongMaterial.h  screenMaterial.cpp  screenMaterial.h  whiteMaterial.cpp  whiteMaterial.h
glframework/renderer/: renderer.cpp  renderer.h
glframework/tools/: tools.cpp  tools.h
wrapper/: checkError.cpp  checkError.h
